--- a/gb/18/7/31/n10603469.md
+++ b/gb/18/7/31/n10603469.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zdoudo3703/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zdoudo3703/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zdoudo3703/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdoudo3703/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zdoudo3703/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdoudo3703/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zdoudo3703/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdoudo3703/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zdoudo3703/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdoudo3703/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zdoudo3703/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdoudo3703/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zdoudo3703/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdoudo3703/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zdoudo3703/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdoudo3703/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zdoudo3703/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zdoudo3703/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zdoudo3703/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zdoudo3703/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zdoudo3703/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zdoudo3703/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zdoudo3703/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zdoudo3703/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>曾伯炎：提前追思的丧礼改革——读《敬寄李锐》</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2018年07月31日讯】《敬寄<ahref="https://github.com/zdoudo3703/djy/blob/master/gb/tag/%E6%9D%8E%E9%94%90.md#1">李锐</a>》是101岁的李锐老还活着，提前敬寄挽联、悼文的致敬活动，他女儿李南央把父亲的追悼追思活动，由离世后提前到生前，改自古盖棺定论之习，为生命犹在之议，不亦破旧规陈习之举，移风易俗之变吗？对着失去知觉死者的赞颂，远不如在他还能感知时听人们对自已的评价了。</p>
+	<p>【大纪元2018年07月31日讯】《敬寄<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9D%8E%E9%94%90.md#1">李锐</a>》是101岁的李锐老还活着，提前敬寄挽联、悼文的致敬活动，他女儿李南央把父亲的追悼追思活动，由离世后提前到生前，改自古盖棺定论之习，为生命犹在之议，不亦破旧规陈习之举，移风易俗之变吗？对着失去知觉死者的赞颂，远不如在他还能感知时听人们对自已的评价了。</p>
 <p>中国的礼崩乐坏，也表现在虚荣、虚悼与虚哀上，我们看到许多人，生时卑污邪、假丑恶，死后却要争伟光正，及什么“伟大马克思主义者”头衔。这世道，虚伪与死要靣子不顾里子到何种可悲，李南央这提前追思父亲的丧礼改革，意义不凡呵！</p>
 <p>当年，北京在康生与谢富治死后封谥的那些：伟大的马克主义者、伟大的马列理论家，而今安在？就是人们称康生为中国的捷尔任斯基的谀辞，不过4年，他俩就被真实的丑恶历史曝光，不仅开除党籍，骨灰也从八宝山开除出去。而捷尔任斯基的封赠，不是嗜血杀人恶魔的诅咒吗?</p>
-<p>我理解:这敬寄<ahref="https://github.com/zdoudo3703/djy/blob/master/gb/tag/%E6%9D%8E%E9%94%90.md#1">李锐</a>的创新，既是对当前造神的嘲讽，也是对死后争谥号的揶揄，人们向实亊求是的回归，对虚荣、虚哀的宣战！</p>
+<p>我理解:这敬寄<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9D%8E%E9%94%90.md#1">李锐</a>的创新，既是对当前造神的嘲讽，也是对死后争谥号的揶揄，人们向实亊求是的回归，对虚荣、虚哀的宣战！</p>
 <p>其实，多年前，杨宪益先生就著文，提倡追悼会开在人离世之前，最好、最妙，让被哀悼者还活着，坐在幕后，去听别人对自己哀思与评价的话，所谓盖棺定论，改为未盖棺便听到议论，该多么有趣！可惜，杨先生没做到，现在，由李南央为父亲做到了，这也是生死风习的改革，超前意识的超前吧？对自已一生缺乏自信的人，敢这么做吗？靠马屁吹捧来满足虚荣的人，有此勇气与坦白吗？古人讲的“君子坦荡荡，小人常戚戚”，读者看到李锐老的君子之风，而那些常窃窃于虚荣虚名者，只见把身后的骂名提前到生前矣！这向李锐老生前致敬，岂非醒世策人之有意义活动吗？</p>
 <p>现在，李锐先生以101岁住北京医院，与死神搏斗胜利，睁开眼来，读到亲友、门生及各界各辈人士，在这本悼念文集《敬寄李锐》里对他公论，敬何如之？慰何如之？这件亊，出在中囯权力闹个人崇拜的高潮时期，就更显意义与价值了。</p>
 <p>联想到李南央从香港出版她父亲那本《李锐口述往亊》，被海关截留不还，李锐是有82年党龄元老部级身份的非凡人物，也受此非礼非法侵凌，更别说普通平民了。李南央把官司打到北京中院，法院也受理了，却赖着拖着，数十次推迟不予审理，连法院也流氓化了，这才是十足的中共特色在篡改恶化传统的中国特色吧？而这种流氓特色，人们从维权律师王全璋等的709大逮捕，失踪千日仍不审，不是流氓病毒已渗透司法界的证明吗？</p>
@@ -50,41 +50,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/18/4/3/n10275521.md#1">传毛前秘书李锐病危 曾称毛是“双料流氓”</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/18/4/6/n10281843.md#1">毛泽东前秘书李锐“病危” 家人回应其状况</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/18/4/11/n10293711.md#1">李锐：九九感怀</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/18/4/13/n10301388.md#1">毛泽东前秘书李锐101岁生辰发声</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/3/n10275521.md#1">传毛前秘书李锐病危 曾称毛是“双料流氓”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/6/n10281843.md#1">毛泽东前秘书李锐“病危” 家人回应其状况</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/11/n10293711.md#1">李锐：九九感怀</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/13/n10301388.md#1">毛泽东前秘书李锐101岁生辰发声</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/6/n9929355.md#1" target="_blank">尹曙生：触目惊心的杀人运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/5/n11501516.md#1" target="_blank">欧洲千人法会 西方法轮功学员谈修炼感悟</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/3/n11564392.md#1" target="_blank">凌晓辉：当代人类的天书（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/12/n11717665.md#1" target="_blank">国际人权日 美多位议员谴责中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/20/12/30/n12654624.md#1">【命理】如何看大运 为何前后半生两重天？</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12791244.md#1">在德州看到UFO 美国球星：几乎100%确定</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/2/n12784045.md#1">日本男童忆述上辈子被车撞死 想见前世母亲</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/2/19/n12762156.md#1">何为“六道”？六道轮回皆由“心念”起</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12792526.md#1">【未解之谜】外星人引发的绝密“泽塔行动”</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/6/n12793849.md#1">【珍言真语】刘慧卿：47人无罪 中共毁港令人痛心</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/6/n12793937.md#1">【财商天下】外星经济产物？比特币身世之谜</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12792754.md#1">【有冇搞错】为香港默哀</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12790564.md#1">与周星驰合作《破坏之王》 吴孟达一语成谶</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12791483.md#1">陈昇证实罹口腔癌 唯一挂念跟妻子的约定</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12791998.md#1">习明泽个资泄漏案“主犯”被火烧私处拍裸照</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/2/n12785364.md#1">当年用心良苦拒借钱 周润发一句话悼念吴孟达</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12790564.md#1">与周星驰合作《破坏之王》 吴孟达一语成谶</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12791483.md#1">陈昇证实罹口腔癌 唯一挂念跟妻子的约定</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12792373.md#1">周杰伦夫妇富养女儿 豪宅地板撒满绘画颜料</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12792743.md#1">汪峰携女儿助阵章子怡 小苹果现身荧屏喊妈妈</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12791244.md#1">在德州看到UFO 美国球星：几乎100%确定</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12792478.md#1">米饭配它吃 减少脂肪囤积 这样吃出不发胖体质</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12790884.md#1">美国一对被不同家庭收养的好友 竟是亲姊妹</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12791436.md#1">老当益壮 美国百岁女人瑞仍在麦当劳工作</a></li>
-<li><a href="https://github.com/zdoudo3703/djy/blob/master/gb/21/3/5/n12792912.md#1">新冠病毒让大脑老化10年？博士：1招变年轻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zdoudo3703/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zdoudo3703/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/7/31/n10603469.htm">曾伯炎：提前追思的丧礼改革——读《敬寄李锐》</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/7/31/n10603469.htm">曾伯炎：提前追思的丧礼改革——读《敬寄李锐》</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zdoudo3703/djy/blob/master/gb/18/7/31/n10603469.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zdoudo3703/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zdoudo3703/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zdoudo3703/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zdoudo3703/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdoudo3703/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/18/7/31/n10603469.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
